tests/baselines/reference/parserArrowFunctionExpression8(target=es3).errors.txt
error TS5108: Option 'target=ES3' has been removed. Please remove it from your configuration.
fileJs.js(1,1): error TS2304: Cannot find name 'x'.
fileTs.ts(1,1): error TS2304: Cannot find name 'x'.


!!! error TS5108: Option 'target=ES3' has been removed. Please remove it from your configuration.
==== fileJs.js (1 errors) ====
    x ? y => ({ y }) : z => ({ z }) // Legal JS
    ~
!!! error TS2304: Cannot find name 'x'.
    
==== fileTs.ts (1 errors) ====
    x ? y => ({ y }) : z => ({ z })
    ~
!!! error TS2304: Cannot find name 'x'.
    